@@ -113,13 +113,14 @@ public final class Utils {
 		try
 		{
 			byte[] b=new byte[1];
-			InputStream r=Runtime.getRuntime().exec("/data/data/com.eemc.aida/files/disassembler "+mode+" "+given).getInputStream();
+			InputStream r=Runtime.getRuntime().exec(new String[]{"/data/data/com.eemc.aida/files/disassembler",mode+"",""+given}).getInputStream();
 			while(r.read(b)!=-1){
 				sb.append(new String(b));
 			}
 		}
 		catch (Exception e)
 		{
+			return "反编译失败"+e.toString();
 		}
 		return sb.toString();
 	}
